--- a/views/applicants.jade
+++ b/views/applicants.jade
@@ -4,4 +4,7 @@ block content
 	.container
 		h1 Applicants
 		ul#applications.list-unstyled
-			li Applicants should go here.
+			for applicant in theData
+				li 
+					a(href="/#{applicant._id}") #{applicant.name}
+				
